@@ -3,8 +3,18 @@
 use strict;
 use warnings;
 
-use Test::DZil qw(Builder simple_ini);
 use Test::More 0.88;
+
+BEGIN {
+    use File::Which qw(which);
+
+    if (!which('rpmbuild')) {
+        plan skip_all => q{rpmbuild not installed, this module isn't very interesting without it};
+        exit(0);
+    }
+}
+
+use Test::DZil qw(Builder simple_ini);
 
 local $ENV{DZIL_PLUGIN_RPM_TEST} = 1;
 
@@ -20,7 +30,7 @@ local $ENV{DZIL_PLUGIN_RPM_TEST} = 1;
         },
     );
     $tzil->release;
-    
+
     ok(
         grep({ /test: would have executed rpmbuild -ba/ } @{ $tzil->log_messages }),
         "basic rpmbuild execution",
@@ -41,13 +51,13 @@ local $ENV{DZIL_PLUGIN_RPM_TEST} = 1;
         },
     );
     $tzil->release;
-    
+
     ok(
         grep({ /test: would have executed rpmbuild -ba --sign/ } @{ $tzil->log_messages }),
         "sign option",
     );
 }
- 
+
 {
     my $tzil = Builder->from_config(
         { dist_root => 'corpus/dist' },
@@ -62,7 +72,7 @@ local $ENV{DZIL_PLUGIN_RPM_TEST} = 1;
         },
     );
     $tzil->release;
-    
+
     ok(
         grep({ /test: would have executed rpmbuild -ba --nodeps/ } @{ $tzil->log_messages }),
         "ignore_build_deps option",
