@@ -1,4 +1,6 @@
 {{$NEXT}}
+- Skip tests that call rpmbuild if not on system (tired of getting CPAN
+  tester fail reports from BSD platforms)
 
 0.004     Mon Mar 19 2012 08:26:00 PM CDT
 - Hide test module from PAUSE
